# shared-fusion

./: .gitignore  README.md  pyproject.toml
helpers/code/: check_joystick_axes.py  get_info_csv.py  get_info_mcap.py  linux_joy_udp_receiver.py  windows_joy_udp_sender.py
helpers/dataset/: all_topics_resume.txt  campus_perception_mcap.txt  can_zoe.txt
human-interface/joystick/examples/: test_joystick.py
human-interface/joystick/joystick_interface/: __init__.py  filters.py  longitudinal_control.py  mappings.py
human-interface/joystick/joystick_interface.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
human-interface/ros2_ws/src/human_interface/: package.xml  setup.cfg  setup.py
human-interface/ros2_ws/src/human_interface/config/: joystick_params.yaml
human-interface/ros2_ws/src/human_interface/human_interface/: human_control_node.py
human-interface/ros2_ws/src/human_interface/launch/: human_control.launch.py
human-interface/ros2_ws/src/joystick_interface/: package.xml  setup.py
human-interface/ros2_ws/src/joystick_interface/joystick_interface/: config.py  human_control.py  human_intention.py  longitudinal_control.py
