[project]
name = "shared-fusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcap>=1.3.1",
    "mcap-ros2-support>=0.5.7",
    "joystick-interface",
    "pygame>=2.6.1",
]
[tool.uv.sources]
joystick-interface = { path = "human-interface/joystick", editable = true }
